[Structure] Mise en place d'une première structure pour le site : les bundles

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,11 @@
-app:
-    resource: "@AppBundle/Controller/"
-    type:     annotation
+site:
+    resource: "@SiteBundle/Resources/config/routing.yml"
+    prefix:   /
+
+event:
+    resource: "@EventBundle/Resources/config/routing.yml"
+    prefix:   /
+
+people:
+    resource: "@PeopleBundle/Resources/config/routing.yml"
+    prefix:   /
